syntax = "proto3";

package exchange;

option go_package = "github.com/kvvPro/metric-collector/proto";

service MetricServer {
	rpc PushMetrics(PushMetricsRequest) returns (PushMetricsResponse) {}
}

message PushMetricsRequest {
	string error = 1;
	repeated Metric metrics = 2;
}
message PushMetricsResponse {
	string error = 1;
}

message Metric {
    string ID = 1;
	string MType = 2;
	optional int64 Delta = 3;
	optional double Value = 4;
}